--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "redux": "^4.2.1",
     "styled-components": "^6.0.7"
   },
